@@ -2,6 +2,7 @@
 #include "desktop/dialogs/tablettester.h"
 #include "desktop/main.h"
 #include "ui_tablettest.h"
+#include <QPushButton>
 
 namespace dialogs {
 
@@ -12,16 +13,25 @@ TabletTestDialog::TabletTestDialog(QWidget *parent)
 	m_ui->setupUi(this);
 
 	connect(
-		static_cast<DrawpileApp *>(qApp), &DrawpileApp::eraserNear, this,
-		[this](bool near) {
-			QString msg;
-			if(near) {
-				msg = QStringLiteral("Eraser brought near");
-			} else {
-				msg = QStringLiteral("Eraser taken away");
-			}
-			m_ui->logView->appendPlainText(msg);
-		});
+		m_ui->buttons->button(QDialogButtonBox::Reset),
+		&QAbstractButton::clicked, m_ui->tablettest,
+		&widgets::TabletTester::clear);
+	connect(
+		m_ui->tablettest, &widgets::TabletTester::eventReport, m_ui->logView,
+		&QPlainTextEdit::appendPlainText);
+	connect(
+		m_ui->buttons->button(QDialogButtonBox::Reset),
+		&QAbstractButton::clicked, m_ui->logView, &QPlainTextEdit::clear);
+	connect(m_ui->buttons, &QDialogButtonBox::rejected, this, &QDialog::reject);
+	connect(&dpApp(), &DrawpileApp::eraserNear, this, [this](bool near) {
+		QString msg;
+		if(near) {
+			msg = QStringLiteral("Eraser brought near");
+		} else {
+			msg = QStringLiteral("Eraser taken away");
+		}
+		m_ui->logView->appendPlainText(msg);
+	});
 }
 
 TabletTestDialog::~TabletTestDialog()
