@@ -6,19 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>730</width>
-    <height>385</height>
+    <width>718</width>
+    <height>398</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Tablet Tester</string>
   </property>
-  <layout class="QHBoxLayout" stretch="1,1">
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="widgets::TabletTester" name="tablettest"/>
-   </item>
-   <item>
-    <layout class="QVBoxLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="widgets::TabletTester" name="tablettest" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QPlainTextEdit" name="logView">
        <property name="readOnly">
@@ -26,14 +33,14 @@
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QPushButton" name="pushButton">
-       <property name="text">
-        <string>Clear</string>
-       </property>
-      </widget>
-     </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QDialogButtonBox" name="buttons">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Close|QDialogButtonBox::Reset</set>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -46,54 +53,5 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections>
-  <connection>
-   <sender>pushButton</sender>
-   <signal>clicked()</signal>
-   <receiver>logView</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>722</x>
-     <y>377</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>659</x>
-     <y>84</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>pushButton</sender>
-   <signal>clicked()</signal>
-   <receiver>tablettest</receiver>
-   <slot>clear()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>419</x>
-     <y>359</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>142</x>
-     <y>242</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>tablettest</sender>
-   <signal>eventReport(QString)</signal>
-   <receiver>logView</receiver>
-   <slot>appendPlainText(QString)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>287</x>
-     <y>187</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>546</x>
-     <y>207</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
